Sometimes use one WallSurface per building level for better performance